turtleart.lessons.turtleart.Main.CircleSquare.scala.error
Source:9: error: not found: value Pie
		avance(2*Pie/3.6)
                         ^