turtleart.lessons.turtleart.Main.CircleSquare.scala.code
override def run() {
	for (i<- 0 to 3) {
		avance(100)
		droite(90)
	}
	avance(100)
	for (i<- 1 to 360) {
		avance(2*Pie/3.6)
		droite(1)
	}
}
